--- a/infra/secret.yaml
+++ b/infra/secret.yaml
@@ -1,8 +1,10 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: my-configmap
+  name: hostile-tweets-secret
+type: Opaque
 data:
   mongo-root-username: SVJHQw==
+  mongo-root-password: aXJhbmlyYW5pcmFu
   mongo-database: SXJhbk1hbERC
   mongo-collection: dHdlZXRz
